# farrapiler

./: .gitignore  README.md
farrapiler/: Cargo.toml
farrapiler/src/: main.rs
guessing_name/src/: main.rs
windotfiles_gui/: Cargo.toml
windotfiles_gui/src/: main.rs
