[package]
name = "windotfiles_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.26", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "persistence",
] }